== Sat Jan 23 23:49:50 UTC 2010 Mikel Lindsaar <raasdnil@gmail.com>

* Version bump to 2.0.5
* Added :raise_delivery_errors to Mail::Message, if set to false will silently rescue all errors raised by the delivery methods, set to true by default

== Sat Jan 23 23:28:42 UTC 2010 Mikel Lindsaar <raasdnil@gmail.com>

* Version bump to 2.0.4
* Added :perform_deliveries to mail, will not actually call deliver on the delivery method if this is set to false, set to true by default.
* Added @delivery_notification_observers to mail messages, you can register an observer with mail by calling mail.register_for_delivery_notification(observer) and then when mail is told to :deliver it will call your observer with observer.delivered_email(self).  It will call your observer if it actually performed the delivery or not (that is, irregardless of the :perform_deliveries flag)
* Added ability to overwrite the Mail.deliveries store with an object of your choice instead of just an array, this is a good way to find out if something actually got delivered as if :perform_deliveries is false, this collection will not get the mail message appended

== Sat Jan 23 05:32:53 UTC 2010 Mikel Lindsaar <raasdnil@gmail.com>

* Version bump to 2.0.3
* Made body.sort_parts! recursive, to do the entire body
* Added ability to use << on the results returned by the various address fields, ie, mail.to << 'new@address' now works
* Message now adds multipart/mixed as the content type if nothing is set and there are parts to the message
* Added #display_names and #addrs to all address fields.  #addrs returns the actual Mail::Address object for each address in the field.
* Body should call to_s on given input... incase someone gave it an IO.readlines result (Array)
* 

== Thu Jan 21 05:27:17 UTC 2010 Mikel Lindsaar <raasdnil@gmail.com>

* Version bump to 2.0.2
* Major change to attachments, add_file now only accepts
  {:filename => 'full/path/to/file.png'} or 